# llvm

./: .git-blame-ignore-revs  .gitignore  1  README.md  merge.status
aocl-ioc64/: CMakeLists.txt  main.cpp
clang-tools-extra/clang-tidy/misc/: CMakeLists.txt  MiscTidyModule.cpp
clang/lib/Headers/: CMakeLists.txt  CSAx86intrin.h  Intel_amx2intrin.h  Intrin.h  (+90 more)
level-zero-cpu-rt/: CMakeLists.txt  README.txt  enable_cpul0_compilation_in_ics.patch  extract_empty_func.py
level-zero-cpu-rt/src/: CMakeLists.txt  cm_printf_host.cpp  cm_printf_host.h  cpu_kernel_launch.cpp  gsf_writer.cpp  gsf_writer.hpp  ze_api.cpp  ze_api_empty.cpp  ze_api_extend.h  ze_basic_config.hpp  ze_buffer.cpp  ze_buffer.hpp  ze_cmdlist.cpp  ze_cmdlist.hpp  ze_cmdqueue.cpp  ze_cmdqueue.hpp  ze_common.hpp  ze_context.cpp  ze_context.hpp  ze_core_loader.cpp  ze_device.cpp  ze_device.hpp  ze_driver.cpp  ze_driver.hpp  ze_event.cpp  ze_event.hpp  ze_kernel.cpp  ze_kernel.hpp  ze_module.cpp  ze_module.hpp  ze_sysman_loader.cpp  ze_tools_loader.cpp  ze_utils.hpp  zes_api_empty.cpp  zet_api_empty.cpp
llvm/Intel_OptionalComponents/: CMakeLists.txt  Intel_SupportedFeatures.txt  LLVMBuild.txt
llvm/lib/: CMakeLists.txt  LLVMBuild.txt
opencl/: CMakeLists.txt
opencl-intel/: .gitignore  .reviewboardrc  CMakeLists.txt  gen_linux_rpm.sh  gen_windows_msis.bat  myfile.txt  rc_template.rc.in
opencl-intel/.github/: CODEOWNERS
opencl-intel/API/: OpenCL.cpp  OpenCLAPI.vcproj  stdafx.cpp
opencl-intel/Framework/: FrameworkFactory.cpp  FrameworkFactory.h  FrameworkProxy.cpp  FrameworkProxy.h  OCLObject.cpp  OCLObjectInfo.cpp  OCLObjectInfo.h  OCLObjectsMap.cpp  OCLObjectsMap.h  OpenCLFramework.cpp  OpenCLFramework.h  OpenCLFramework.vcproj  ReadMe.txt  cl_config.cpp  cl_framework.cpp  cl_framework.h  cl_object.cpp  cl_object.h  cl_object_info.cpp  cl_object_info.h  cl_objects_map.cpp  cl_objects_map.h  dllmain.cpp  framework_proxy.cpp  framework_proxy.h
opencl-intel/FrontendDriver/: CMakeLists.txt  Compile.cpp  Compile.h  FrontendDriver.cpp  FrontendDriver.h  FrontendDriver.map  FrontendResultImpl.h  GetKernelArgInfo.cpp  GetKernelArgInfo.h  Link.cpp  Link.h  OpenCLLinkOptions.td  ParseSPIRV.cpp  ParseSPIRV.h  SPIRMaterializer.cpp  SPIRMaterializer.h  SPIRVMaterializer.cpp  SPIRVMaterializer.h  clang_device_info.h  clang_driver.cpp  clang_driver.h  fe_driver_main.h  fe_driver_main_linux.cpp  fe_driver_main_win32.cpp  opencl_link_options.inc  resource.h
opencl-intel/backend/: CMakeLists.txt
opencl-intel/cl_api/: CMakeLists.txt  ICLDevBackendBinary.h  ICLDevBackendCompilationService.h  ICLDevBackendExecutable.h  ICLDevBackendExecutionService.h  ICLDevBackendImageService.h  ICLDevBackendKernel.h  ICLDevBackendOptions.h  ICLDevBackendPlugin.h  ICLDevBackendProgram.h  ICLDevBackendSerializationService.h  ICLDevBackendServiceFactory.h  IDeviceCommandManager.h  PipeCommon.h  cl_api.vcproj  cl_dev_backend_api.h  cl_device_api.h  cl_kernel_arg_type.h  cl_sampler_mask.h  cl_types.h  cl_types2.h  common_dev_limits.h  cpu_dev_limits.h  frontend_api.h  mic_dev_limits.h  ocl_itt.h  ocl_supported_extensions.h  opencl_c_features.h  task_executor.h
opencl-intel/cl_prod/: cl_prod.sln  cl_promotion.xml  cl_sdf.xml  mtv_promotion.xml
opencl-intel/clang_compiler/: .gitignore  CMakeLists.txt  SPIRMaterializer.cpp  SPIRMaterializer.h  clang_compiler.cpp  clang_compiler.h  clang_compiler.rc  clang_driver.cpp  clang_driver.h  resource.h  stdafx.cpp  stdafx.h
opencl-intel/cmake/: AddOpenCL.cmake  AddOpenCLClang.cmake  CMakeFuncs.cmake  CMake_linux_tools.cmake  CMake_windows_tools.cmake  FindLLVM.cmake  cl_config.in  embed.rpath.cmake  itt.cmake  separate_linux_symbols.sh
opencl-intel/cmake_utils/: CMakeFuncs.txt  CMake_android_tools.cmake  CMake_apple_tools.cmake  CMake_linux_tools.cmake  CMake_linux_tools.txt  CMake_windows_tools.cmake  CMake_windows_tools.txt  Linux-GNU.cmake  Linux-Intel.cmake  Linux-Meego-Cross.cmake  Windows-icl.cmake  build_project.bat  c++_2_c#.pl  c++_2_c#.py  embed.rpath.txt  gen_linux_make.sh  gen_vc_project.bat  intel_it_linux_tool_versions.txt  itt.cmake  separate_linux_symbols.sh  vc_2_intel_cl_fix.bat  vc_2_intel_link_fix.bat
opencl-intel/common_runtime/: CMakeLists.txt  CRT.sln  CRT.vcproj  common_runtime.rc  common_runtime.rc.in  crt_interface.cpp  crt_interface.def  crt_interface.h  crt_internals.cpp  crt_internals.h  crt_module.cpp  crt_module.h  register_vendor32.reg  register_vendor64.reg  unregister_vendor32.reg  unregister_vendor64.reg
opencl-intel/devices/: CMakeLists.txt
opencl-intel/doc/: Intel_TaskSeqAsync.rst  Intel_sycl_matrix.rst  TaskSeqAsync.rst  cpu_backend_lit_tests.rst  cpu_runtime_testing.rst  cpu_signature_macro_proposal.rst  kernel_debugging.rst  library_versioning.rst  metadata_api.rst  release_notes_fpga_emu.txt  sub_group_emulation.rst  sycl_matrix.rst  vectorization_factor_attribute_extension_proposal.rst
opencl-intel/fe_compilers/: CMakeLists.txt
opencl-intel/framework/: CMakeLists.txt  DebugPostBuild.cmd  PostBuild.cmd  ReleasePostBuild.cmd  UserLoggerOutputParams.cpp  UserLoggerOutputParams.h  cl.cfg  cl_framework.cpp  cl_framework.h  cl_framework.vcproj  cl_framework_alias_linux.h  cl_framework_linux_exports.txt  cl_gl_dx_sharing.cfg  cl_object.cpp  cl_object_info.h  cl_objects_map.cpp  cl_release.cfg  dllmain.cpp  dllmain_linux.cpp  dllmain_win32.cpp  framework_proxy.cpp  framework_proxy.h  intelocl.def  intelocl.rc  memory_objects.cpp  ocl_config.cpp  ocl_itt.h  ocl_object_base.cpp  register_vendor.reg  stdafx.h  unregister_vendor.reg
opencl-intel/runtime/: fence_functions.h  float4.h  ocl_rt.h  wi_functions.h
opencl-intel/tests/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
opencl-intel/utils/: CMakeLists.txt
opencl/opencl-aot/: CMakeLists.txt
openmp/: .gitlab-ci.yml  CMakeLists.txt
openmp/libomptarget/: CMakeLists.txt  RuntimeOptionsIntel.rst
sycl/plugins/: CMakeLists.txt
sycl/tools/: CMakeLists.txt  get_device_count_by_type.cpp
sycl/unittests/: CMakeLists.txt
xpti/src/: CMakeLists.txt
xptifw/unit_test/: CMakeLists.txt  xpti_api_tests.cpp
(+44608 files in other folders)
